--- a/AngularClientApp/src/app/components/categories/categories.component.css
+++ b/AngularClientApp/src/app/components/categories/categories.component.css
@@ -1,31 +1,50 @@
-.categories .category{ position:relative; display:inline-block;width:260px;height:220px;}
-.categories .category img{width:260px;height:220px; margin:5px; border:3px solid green;border-radius:32px;}
-.categories .category .category-name { font-size:34px;font-weight:bold;color:black;position:absolute;top:45%;width:100%;text-align:center;}
-@media only screen and (max-width: 600px) {
- 
-.categories .category
-{
-  position: relative;
-  display: inline-block;
-  width: 50%;
-  height: 120px;
+.categories {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px; /* Increased space between cells */
+  margin-top: 20px; /* Added 20px margin at the top of the table */
 }
 
-.categories .category img {
-  width: 90%;
-  height: 110px;
-  margin: 5px;
-  border: 3px solid green;
-  border-radius: 20px;
-}
-
-.categories .category .category-name {
-  font-size: 21px;
-  font-weight: bold;
-  color: red;
-  position: absolute;
-  top: 37%;
-  width: 100%;
+.category {
+  flex: 1 1 calc(20% - 20px); /* Adjusted for the increased gap */
+  max-width: calc(20% - 20px);
+  box-sizing: border-box;
+  background-color: #00bbff45; /* Background color */
+  color: white;
+  font-size: 26px;
+  border: 1px solid white; /* Border width */
+  border-radius: 5px; /* Rounded border */
+  padding: 20px;
+  height: 150px; /* Fixed height */
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
+  font-family: 'Cairo', sans-serif; /* Example Arabic font */
 }
+
+.category a {
+  color: white;
+  text-decoration: none;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.category-name {
+  display: block;
+}
+@media (max-width: 768px) {
+  .categories {
+      width: 100%;
+      margin: 45px 0 auto; 
+      justify-content: center; 
   }
+
+  .category {
+      flex: 0 0 calc(50% - 20px);
+      max-width: calc(50% - 20px);
+  }
+}
