--- a/AngularClientApp/src/styles.css
+++ b/AngularClientApp/src/styles.css
@@ -2,16 +2,19 @@
 body, html {
   overflow-x: hidden;
   position: relative;
-  background-color: #ecdada;
+  background-color:#0c5585c2; /*#ecdada;*/
   min-height: 600px;
 }
+.container{margin-top: 45px;}
 /* Provide sufficient contrast against white background */
 a {color: #0366d6;}
 
 code {color: #e01a76;}
 
 .btn-primary {color: #fff;background-color: #1b6ec2;border-color: #1861ac;}
-
+@media (max-width: 600px) {
+  .container{margin-top: -6px;}
+}
 @media (max-width: 768px) {
   .navbar-collapse {
     position: fixed;
