Some design fixes

--- a/AngularClientApp/src/app/components/login/login.component.css
+++ b/AngularClientApp/src/app/components/login/login.component.css
@@ -4,9 +4,11 @@
     margin:auto;
 }
 .btn.cancel{
-    margin-right:10px;
+    margin-right:40px;
 }
+.row.buttons{margin: 10px;}
 @media only screen and (max-width: 600px) {
+  
   .main-frame {
     width: 95%;
     margin: auto;
