--- a/AngularClientApp/src/app/components/login/login.component.html
+++ b/AngularClientApp/src/app/components/login/login.component.html
@@ -74,7 +74,7 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row buttons">
           <div class="col-md-8 offset-md-2">
             <button class="btn btn-primary mr-3"
                     type="submit"
