--- a/AngularClientApp/src/app/components/products-list/products-list.component.css
+++ b/AngularClientApp/src/app/components/products-list/products-list.component.css
@@ -58,9 +58,24 @@ vertical-align: top;
   .product-variations .popup-body select { width:207px; padding-right:15px;height:30px;margin-right:18px;}
   .product-variations .popup-body .cart{ display:block; padding-top:15px;}
   .product-variations .popup-body .cart .var-tota-price{ width:60px; margin-left:20px}
-
+  .overlay {
+    background: #e9e9e9;  
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: 0.5;
+    z-index:1;
+  }
+  .waiting-image {
+    position: absolute;
+    top: 250px;
+    left: calc(50% - 64px);
+  }
    @media only screen and (max-width: 600px) {
-      .product-item {position:relative;padding: 4px;border: 1px solid red;border-radius: 5px;width: 95%;display: inline-block;margin: 2%;min-height: 220px;}
+      .product-list{margin-top: 45px;}
+      .product-item {position:relative;padding: 4px;border: 1px solid #7db9f5;border-radius: 5px;width: 95%;display: inline-block;margin: 2%;min-height: 220px;}
       
       .product-info {vertical-align:top;text-align: right;width: 70%;height:100px;display: inline-block;background-color: aliceblue;}
       
@@ -73,7 +88,7 @@ vertical-align: top;
       .product-image img {border-radius: 4px;height: 100px;width: 100%;border: 1px solid #2b5590;}
       
       .product-image img.selected-image {position: absolute;bottom: -140px;right: -0px;z-index: 1;border: 3px solid #95a7f5;height: 200px;width: 300px;}
-      
+      .product-info-line2{background-color:#f1ecdc;}
       .product-info-line3 {text-align:left; background-color:aliceblue;}  
       .product-info-line3 .cart {float: none;opacity:0.6;}
       
