--- a/AngularClientApp/src/app/components/categories/categories.component.css
+++ b/AngularClientApp/src/app/components/categories/categories.component.css
@@ -22,7 +22,11 @@
   text-align: center;
   font-family: 'Cairo', sans-serif; /* Example Arabic font */
 }
-
+.category:hover {
+  transform: scale(1.1) rotate(1deg);  
+  box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.3);
+  background-color: #1E90FF;
+}
 .category a {
   color: white;
   text-decoration: none;
@@ -41,10 +45,14 @@
       width: 100%;
       margin: 45px 0 auto; 
       justify-content: center; 
+      gap:8px;
   }
 
   .category {
       flex: 0 0 calc(50% - 20px);
       max-width: calc(50% - 20px);
+      padding: 6px;
+      height: 54px;
+      font-size: 18px;
   }
 }
