--- a/AngularClientApp/src/app/components/purchase/purchase-list/purchase-list.component.html
+++ b/AngularClientApp/src/app/components/purchase/purchase-list/purchase-list.component.html
@@ -2,7 +2,7 @@
 <div class="overlay" [hidden]="!isLoading">
   <img class="waiting-image" src="/assets/Images/loading.gif" />
 </div>
-<h1>قائمة المشتريات</h1>
+<h1 class="title">قائمة المشتريات</h1>
 <div class="filter-div">
   <div class="filter-item">
     <label class="data-label" for="providerIdId">المزود:</label>
