--- a/AngularClientApp/src/app/components/add-edit-product/add-edit-product.component.css
+++ b/AngularClientApp/src/app/components/add-edit-product/add-edit-product.component.css
@@ -1,225 +1,57 @@
-.overlay {
-  background: #e9e9e9;  
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  opacity: 0.5;
-  z-index:1;
-}
-.waiting-image {
-  position: absolute;
-  top: 50%;
-  left: 45%;
-}
-.card-body {
-  position: relative;
-  border: 10px solid aliceblue;
-  background-color: aliceblue;
-}
+.title{color: aliceblue;}
+.overlay {background: #e9e9e9;  position: absolute;top: 0;right: 0;bottom: 0;left: 0;opacity: 0.5;z-index:1;}
+.waiting-image {position: absolute;top: 50%;left: 45%;}
+.card-body {position: relative;border: 10px solid aliceblue;background-color: aliceblue;}
+.form-group.row {text-align: right;}
+.submit-div {position: absolute;left: 20px;bottom: 20px;}
+.submit-div .btn {width: 100px;}
+.second-panel {vertical-align: top;display: inline-block;padding-right: 20px;width: 50%;height: 100%;}
+.uploader {width: 100%;}
+.uploader .file-input {display: inline;width: 78% !important;margin-left: 0px;margin-bottom: 10px;}
+.uploader .btn {float: right;margin: 0 !important;padding: 4px !important;}
+.uploader .btn img {width: 20px;background-color: transparent;margin-left: 5px;}
+.new-files-list {margin: 0 10px 30px 0;}
+.new-files-list .file-name {margin-right: 10px;}
+.product-variations .delete-icon,
+.product-image .delete-icon,
+.new-files-list .delete-icon {cursor: pointer;float: left;margin: 5px 5px 0 10px;width: 20px;height: 20px;background-color: transparent;}
+.product-images {vertical-align: top;}
+.data-label {margin-right: 20px;font-weight: bold;text-align: right;width: 15%;}
+.product-item {padding: 7px;border: 5px solid red;border-radius: 10px;width: 240px;display: inline-block;margin: 10px;}
+.product-info {padding: 20px;width: 50%;display: inline-block;background-color: aliceblue;}
+.product-info .row input,
+.product-info .row textarea,
+.product-info .row ul {width: 70%;margin-bottom: 10px;}
 
-.form-group.row {
-  text-align: right;
-}
+.categories-row {margin-right: 0px;background-color: aliceblue;}
+.categories {width: 100%;}
+.categories ul {list-style: none;columns: 4;-webkit-columns: 4;-moz-columns: 4;margin: 0;line-height:0.5;}
+.categories li{line-height: 1.3;height: 36px;}
+.category input{ width:30px;min-height: 20px;}
+.category input:checked {color: #f00;background-color: #2196F3;}
+.categories-error-message{color:red;}
 
-.submit-div {
-  position: absolute;
-  left: 20px;
-  bottom: 20px;
-}
+.product-image {display: inline-block;border: 1px solid gray;padding: 5px;text-align: right;width: 100%;}
+.produc-image-thumb {margin-right: 10px;display: inline-block;}
+.produc-image-thumb img {border-radius: 5px;border: 1px solid green;width: 40px !important;height: 40px !important;}
+.produc-image-name {margin-right: 5%;width: 65%;display: inline-block;}
+.produc-image-icon {width: 15%;display: inline-block;text-align: left;}
+.product-image img {height: 180px;width: 210px;}
+.product-name {font-weight: bold;display: inline-block;width: 100%;text-align: right;}
+.product-price {color: seagreen;display: inline-block;width: 30%;}
+.product-info-line1 {border: 1px solid white;padding: 5px;}
 
-  .submit-div .btn {
-    width: 100px;
-  }
+.product-info-line2 {border: 1px solid white;padding: 5px;text-align: right;}
+.product-id {font-weight: bold;}
+.product-info-line3 {padding-top: 5px;text-align: right;width: 100%;}
 
-.second-panel {
-  vertical-align: top;
-  display: inline-block;
-  padding-right: 20px;
-  width: 50%;
-  height: 100%;
-}
-
-.uploader {
-  width: 100%;
-}
-
-  .uploader .file-input {
-    display: inline;
-    width: 78% !important;
-    margin-left: 0px;
-  }
-
-  .uploader .btn {
-    float: right;
-    margin: 0 !important;
-    padding: 4px !important;
-  }
-
-    .uploader .btn img {
-      width: 20px;
-      background-color: transparent;
-      margin-left: 5px;
-    }
-
-.new-files-list {
-  margin: 0 10px 30px 0;
-}
-
-  .new-files-list .file-name {
-    margin-right: 10px;
-  }
- 
-  .product-variations .delete-icon,
-  .product-image .delete-icon,
-  .new-files-list .delete-icon {
-    cursor: pointer;
-    float: left;
-    margin: 5px 5px 0 10px;
-    width: 20px;
-    height: 20px;
-    background-color: transparent;
-  }
-
-.product-images {
-  vertical-align: top;
-}
-
-.data-label {
-  margin-right: 20px;
-  font-weight: bold;
-  text-align: right;
-  width: 15%;
-}
-
-.product-item {
-  padding: 7px;
-  border: 5px solid red;
-  border-radius: 10px;
-  width: 240px;
-  display: inline-block;
-  margin: 10px;
-}
-
-.product-info {
-  padding: 20px;
-  width: 50%;
-  display: inline-block;
-  background-color: aliceblue;
-}
-  .product-info .row input,
-  .product-info .row textarea,
-  .product-info .row ul {    
-    width: 70%;    
-  }
-.categories-row {
-  margin-right: 0px;
-  background-color: aliceblue;
-}
-.categories {
- 
-  width: 100%;
-}
-   .categories ul {
-    list-style: none;
-    columns: 4;
-    -webkit-columns: 4;
-    -moz-columns: 4;
-   /* width: 98%!important;*/
-    margin: 0;
-    line-height:0.5;
-  }
-  .categories li{line-height: 1.3;}
-   .category input{ width:30px;min-height: 20px;}
-    .category input:checked {
-      color: #f00;
-      background-color: #2196F3;
-    }
-.categories-error-message{
-    color:red;
-}
-.product-image {
-  display: inline-block;
-  border: 1px solid gray;
-  padding: 5px;
-  text-align: right;
-  width: 100%;
-}
-
-.produc-image-thumb {
-  margin-right: 10px;
-  display: inline-block;
-}
-
-  .produc-image-thumb img {
-    border-radius: 5px;
-    border: 1px solid green;
-    width: 40px !important;
-    height: 40px !important;
-  }
-
-.produc-image-name {
-  margin-right: 5%;
-  width: 65%;
-  display: inline-block;
-}
-
-.produc-image-icon {
-  width: 15%;
-  display: inline-block;
-  text-align: left;
-}
-
-.product-image img {
-  height: 180px;
-  width: 210px;
-}
-
-.product-name {
-  font-weight: bold;
-  display: inline-block;
-  width: 100%;
-  text-align: right;
-}
-
-.product-price {
-  color: seagreen;
-  display: inline-block;
-  width: 30%;
-}
-
-.product-info-line1 {
-  border: 1px solid white;
-  padding: 5px;
-}
-
-.product-info-line2 {
-  border: 1px solid white;
-  padding: 5px;
-  text-align: right;
-}
-
-.product-id {
-  font-weight: bold;
-}
-
-.product-info-line3 {
-  padding-top: 5px;
-  text-align: right;
-  width: 100%;
-}
-
-.cart {
-  float: left;
-  display: inline;
-  text-align: left;
-}
+.cart {float: left;display: inline;text-align: left;}
 .product-variations{ text-align:right;}
-.product-variations .product-variation{ border:1px solid green;}
+.product-variations .product-variation{ border:1px solid green;min-height: 36px;}
 .product-variations .data-label { margin-right:10px;margin-left:5px; font-weight:bold; text-align:right; width:auto;}
 .product-variations .product-variation-price { width: 90px;display: inline;}
 .product-variations .product-variation-description{ width:265px; display:inline;}
+.product-variations .add-variation-form-controls{margin-top: 10px;}
 .product-variations .add-variation-item{ display:inline-block;}
 .product-variations .add-variation-item .fa-plus-circle {color: green;font-size: 27px;vertical-align:bottom; cursor:pointer;}
 
@@ -248,65 +80,26 @@
   cursor: pointer;
 }
 @media only screen and (max-width: 600px) {
-  .product-info .row input, .product-info .row textarea {
-    width: 65%;
-  }
-  .data-label {
-    margin-right: 20px;
-    font-weight: bold;
-    text-align: right;
-    width: 25%;
-  }
+.product-info .row input, .product-info .row textarea {width: 65%;margin-bottom: 10px;}
+.data-label {margin-right: 10px;font-weight: bold;text-align: right;width: 25%;}
+.card-body {padding: 0px;border: none;}
+.product-info {padding: 20px;width: 100%;display: inline-block;background-color: aliceblue;}
+.uploader .file-input {display: inline;width: 64% !important;margin-left: 0px;}
+.second-panel {margin-top:10px;vertical-align: top;display:block;padding-right: 20px;width: 100%;height: 100%;}
+.new-files-list {margin: 0;}
+.submit-div {position: inherit;margin-bottom: 20px;text-align:center;}
+.submit-div .btn {width:80%;margin:0!important;}
   
-  .card-body {
-    padding: 0px;
-    border: none;
-  }
-  .product-info {
-    padding: 20px;
-    width: 100%;
-    display: inline-block;
-    background-color: aliceblue;
-  }
-  .uploader .file-input {
-    display: inline;
-    width: 64% !important;
-    margin-left: 0px;
-  }
-  .second-panel {
-      margin-top:10px;
-    vertical-align: top;
-    display:block;
-    padding-right: 20px;
-    width: 100%;
-    height: 100%;
-  }
-  .new-files-list {
-    margin: 0;
-  }
-  .submit-div {
-    position: inherit;   
-    margin-bottom: 20px;
-    text-align:center;
-  }
-    .submit-div .btn {
-    width:80%;
-    margin:0!important;
-  }
-  .categories ul {
-    list-style: none;
-    columns: 2;
-    -webkit-columns: 2;
-    -moz-columns: 2;
-   /* width: 98%!important;*/
-    margin: 0;
-    line-height:0.5;
-  }
-  .categories li{line-height: 1.3;}
-  .categories li .container{padding: 0 0 0 0;}
-   .category input{ width:30px;min-height: 20px;}
-    .category input:checked {
-      color: #f00;
-      background-color: #2196F3;
-    }
+.categories ul {list-style: none;columns: 2;-webkit-columns: 2;-moz-columns: 2;margin: 0;line-height:0.5;padding-right: 10px;}
+.categories li{line-height: 1.3;height: 28px;min-width: 200px;}
+.categories li .container{padding: 0 0 0 0;}
+.category input{ width:30px;min-height: 20px;}
+.category input:checked {color: #f00;background-color: #2196F3;}
+
+.add-variation-form-controls{position: relative;min-height: 100px;border: 1px solid green;width:97%}
+.add-variation-form-controls .add-variation-item.plus-icon{position: absolute;top:10px;right: 5px}
+.add-variation-form-controls .data-label.desc{position: absolute;top:10px;right: 24px}
+.add-variation-form-controls .product-variation-description{position: absolute;top:10px;right: 90px;width:200px;}
+.add-variation-form-controls .data-label.price{position: absolute;top:54px;right: 24px;}
+.add-variation-form-controls .product-variation-price{position: absolute;top:54px;right: 90px;}
 }
