--- a/AngularClientApp/src/app/components/order/orders-list/orders-list.component.css
+++ b/AngularClientApp/src/app/components/order/orders-list/orders-list.component.css
@@ -1,4 +1,4 @@
-.title{width:96%;}
+.title{width:96%;color: aliceblue;}
  h1 {text-align: right;}
 .Telephone {direction:ltr;}
 .overlay {background: #e9e9e9;position: fixed;top: 0;right: 0;bottom: 0;left: 0;opacity: 0.5;z-index: 1;}
